APTS-518:Fix clinical summary loading errror and content overlapping

--- a/src/app/patient-dashboard/common/patient-banner/patient-banner.component.css
+++ b/src/app/patient-dashboard/common/patient-banner/patient-banner.component.css
@@ -59,7 +59,7 @@
     top: 119px;
     bottom: auto;
     width: inherit;
-    z-index: 10;
+    z-index: 10 !important;
 }
 
 .sticky .container-fluid.patient-banner-partially{
